--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "antd": "^5.27.4",
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
@@ -29,6 +30,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
+    "sweetalert2": "^11.26.2",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
@@ -58,6 +60,10 @@
       "react-dom": "^16.8.0 || ^17 || ^18 || ^19"
     },
     "@react-jvectormap/world": {
+      "react": "^16.8.0 || ^17 || ^18 || ^19",
+      "react-dom": "^16.8.0 || ^17 || ^18 || ^19"
+    },
+    "antd": {
       "react": "^16.8.0 || ^17 || ^18 || ^19",
       "react-dom": "^16.8.0 || ^17 || ^18 || ^19"
     }
